# AutoFinQA

./: .dockerignore  .env.copy  .gitignore  COMMIT_REWRITE_INSTRUCTIONS.md  Dockerfile  GIT_HISTORY_REWRITE_GUIDE.md  Presentation_Results.csv  QUICK_START.md  README.md  auto_rewrite.sh  final_comparison_results.csv  generation_results_final.csv  get_lib_versions.py  main.py  package-lock.json  pyproject.toml  requirements.txt  results_retrieval_final.csv  rewrite_commits.sh  rewrite_git_history.py  rewrite_git_history.sh  start.sh
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: rewrite_git_history.yml
auto_finQA/config/: config.yaml
auto_finQA/etl/: data_ingestion.py
auto_finQA/eval/: cache_numeric.json
auto_finQA/evaluation/: eval_finqa.py  eval_metrics.py  eval_numeric_results.json  eval_retrieval.py  eval_simple_rag_metrics.py  generation_final_csv.py  numeric_evaluator.py  run_evaluation.py
auto_finQA/exception/: custom_exception.py
auto_finQA/prompt_library/: prompts.py
auto_finQA/retriever/: retrieval.py
auto_finQA/router/: main.py
auto_finQA/utils/: model_loader.py
auto_finQA/workflow/: agentic_workflow.py  simple_rag_workflow.py
data/: testing.txt
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatMessage.jsx  FileUploader.jsx  MessageInput.jsx  ThemeToggle.jsx  WorkflowSelect.jsx
frontend/src/pages/: ChatPage.jsx  UploadPage.jsx
frontend/src/services/: api.js  chatService.js  (+1 more)
